Add shunt and fuse parts
Signed-off-by: Charles Steinkuehler <charles@steinkuehler.net>

--- a/CRAMPS/ToDo.txt
+++ b/CRAMPS/ToDo.txt
@@ -3,9 +3,9 @@ Schematic Updates:
   Fix component attributes so VALUE field does not separate parts of the same type
     Using the Value field to name connectors makes working with the BOM *PAINFUL*
   Re-annotate to get sane reference designators
-  Add fuses and part numbers to the BOM, not just the fuse sockets
-  Add shorting jumpers to BOM? (used for setting microsteps, bypassing estop, etc)
-    (25) TE 382811-8
+x Add fuses and part numbers to the BOM, not just the fuse sockets
+x Add shorting jumpers to BOM? (used for setting microsteps, bypassing estop, etc)
+x   TE 382811-8
   General cleanup & review all text and notes
   Generate schematic for CRAMP3 (3-channel add-on board)
 
